cargo-features = ["workspace-inheritance"]

[package]
name = "pueue-lib"
version = "0.20.0"
description = "The shared library to work with the Pueue client and daemon."
keywords = ["pueue"]
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
async-trait = "0.1"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "4"
rand = "0.8"
rcgen = "0.9"
rev_buf_reader = "0.3"
rustls = "0.20"
rustls-pemfile = "1"
serde_cbor = "0.11"
serde_yaml = "0.8"
shellexpand = "2.1"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1"
tokio-rustls = "0.23"

log = { workspace = true }
snap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "io-util",
] }

[target.'cfg(not(windows))'.dependencies]
whoami = "1"

[dev-dependencies]
anyhow = "1"
better-panic = "0.3"
pretty_assertions = "1"
portpicker = "0.1"
tempdir = "0.3"
tokio = { version = "1", features = [ "time" ] }
